--- a/assets/index.css
+++ b/assets/index.css
@@ -1,9 +1,12 @@
-html, body, #main {
+html,
+body,
+#main {
   margin: 0;
   padding: 0;
   width: 100%;
   height: 100%;
-  font-family: -apple-system, BlinkMacSystemFont, 'HelveticaNeue', 'Helvetica', sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "HelveticaNeue", "Helvetica",
+    sans-serif;
 }
 
 #main {
@@ -16,7 +19,8 @@ html, body, #main {
   /*filter: blur(2px);*/
 }
 
-.messages .sent, .messages .received {
+.messages .sent,
+.messages .received {
   margin: 1em 0;
   position: relative;
   border: 1px solid transparent;
@@ -32,8 +36,10 @@ html, body, #main {
   transform-origin: right bottom;
 }
 
-.messages .sent > div, .messages .received > div {
-  font-family: -apple-system, BlinkMacSystemFont, 'HelveticaNeue', 'Helvetica', sans-serif;
+.messages .sent > div,
+.messages .received > div {
+  font-family: -apple-system, BlinkMacSystemFont, "HelveticaNeue", "Helvetica",
+    sans-serif;
   display: inline-block;
   max-width: 70%;
   position: relative;
@@ -47,13 +53,18 @@ html, body, #main {
   line-height: 20px;
 }
 
+.messages .bordered.large > div {
+  font-size: 28px;
+  line-height: 28px;
+}
+
 .messages .sent.bordered > div {
-  background-color: #007AFF;
+  background-color: #007aff;
   color: white;
 }
 
 .messages .received.bordered > div {
-  background-color: #E5E5EA;
+  background-color: #e5e5ea;
   color: black;
 }
 
@@ -85,7 +96,6 @@ html, body, #main {
   top: 50%;
   left: 50%;
 }
-
 
 .spinner-emoji {
   height: 1em;
